--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -60,7 +60,7 @@
 
   <footer class="site-footer">
     <p class="logout-text"><a href="/admin/logout">Logout</a></p>
-    <p>&copy; 2023 Fake Adoption Center. All rights reserved.</p>
+    <p>&copy; 2024 Fake Adoption Center | By JohnnyLouisTech | All rights reserved |</p>
   </footer>
 
   <script>
