--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -156,8 +156,20 @@
     </div>
   </div>
   <footer class="site-footer">
-    <p>&copy; 2023 Fake Adoption Center. All rights reserved.</p>
+    <p>&copy; 2024 Fake Adoption Center | By JohnnyLouisTech | All rights reserved |</p>
   </footer>
+
+<div class="form-overlay">
+  <div class="form-overlay-inner">
+    <form class="form-conten">
+      <input type="text" id="name" autocomplete="off" class="form-field">
+    </form>
+    <div class="form-photo">
+      <p>Thank you for your interest in Barksalot.</p>
+    </div>
+    <div class="thank-you"></div>
+  </div>
+</div>
 
   <script src="js/main.js"></script>
 </body>
